legacy/additional_testing/gcc_crash_stats/results/gcc482/save_st/pr83202-1.c-4.8.2-1.out.txt
pr83202-1.c: In function ‘test’:
pr83202-1.c:6:3: error: ‘for’ loop initial declarations are only allowed in C99 mode
   for (int i = 0; i < 8; i++)
   ^
pr83202-1.c:6:3: note: use option -std=c99 or -std=gnu99 to compile your code
pr83202-1.c:8:7: error: ‘for’ loop initial declarations are only allowed in C99 mode
       for (int j = 0; j < i; j+=4)
       ^
